fix-index-spacing

--- a/css/style.css
+++ b/css/style.css
@@ -806,7 +806,7 @@ h3 {
   @media only screen and (min-width: 37.5em) {
     .benefits__box {
       gap: 2.5rem;
-      margin: 0 auto; } }
+      margin: 0 auto 128px auto; } }
   @media only screen and (min-width: 62.5em) {
     .benefits__box {
       flex-direction: row-reverse; } }
