--- a/sass/_benefits.scss
+++ b/sass/_benefits.scss
@@ -65,7 +65,8 @@
 
     @media only screen and (min-width: $bp-tablet) {
       gap: 2.5rem;
-      margin: 0 auto;
+      margin: 0 auto 128px auto;
+      
 
     }
 
